Cabal-Version:      2.4
Name:               athena
Version:            0.1.0.1
Author:             The Athena Developers
Maintainer:         The Athena Developers
Build-Type:         Simple
Copyright:          © 2021 The Athena Developers
License:            MIT
License-files:      LICENSE

flag defer-plugin-errors
    description:
        Defer errors from the plugin, useful for things like Haddock that can't handle it.
    default: True
    manual: True

common lang
    default-language:   Haskell2010
    ghc-options:
      -Wall -Wnoncanonical-monad-instances
      -Wincomplete-uni-patterns -Wincomplete-record-updates
      -Wredundant-constraints -Widentities -rtsopts
      -- See Plutus Tx readme
      -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
    if flag(defer-plugin-errors)
        ghc-options: -fplugin-opt PlutusTx.Plugin:defer-errors

library
  import: lang
  hs-source-dirs:      src, tests
  exposed-modules:     Account
                     , Account.Create
                     , Account.Safe.OffChain
                     , Account.Safe.OnChain
                     , Contract
                     , Contract.Accuse
                     , Contract.Create
                     , Contract.Mediate
                     , Contract.Sign
                     , Contract.Safe.OffChain
                     , Contract.Safe.OnChain
                     , Utils
                     , Test.Run
                     , Test.Example
                     , Test.Sample
                     , Test.Trace
  build-depends:       aeson ^>=1.5.6.0
                     , base ^>=4.14.1.0
                     , bytestring -any
                     , data-default
                     , containers -any
                     , freer-extras
                     , lens
                     , plutus-contract
                     , plutus-ledger
                     , plutus-ledger-api
                     , plutus-ledger-constraints
                     , plutus-chain-index
                     , plutus-chain-index-core
                     , plutus-tx-plugin
                     , plutus-tx
                     , plutus-use-cases
                     , text

test-suite tests
  type: exitcode-stdio-1.0
  main-is: Test.hs
  hs-source-dirs: tests
  other-modules:       Test.Example
                     , Test.Run
                     , Test.Sample
                     , Test.Trace
                     , Test.Suites
  default-language: Haskell2010
  ghc-options:         -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
  build-depends:       base ^>=4.14.1.0
                     , aeson
                     , containers
                     , data-default
                     , freer-extras
                     , lens
                     , athena
                     , bytestring
                     , cardano-api
                     , plutus-contract
                     , plutus-ledger
                     , plutus-tx
                     , QuickCheck
                     , HUnit
                     , tasty
                     , tasty-quickcheck
                     , text
  if !(impl(ghcjs) || os(ghcjs))
    build-depends: plutus-tx-plugin -any
