Cabal-Version:      2.4
Name:               athena
Version:            0.2.0.0
Author:             The Athena Developers
Maintainer:         The Athena Developers
Build-Type:         Simple
Copyright:          © 2022 The Athena Developers
License:            MIT
License-files:      LICENSE

flag defer-plugin-errors
    description:
        Defer errors from the plugin, useful for things like Haddock that can't handle it.
    default: True
    manual: True

common lang
    default-language:   Haskell2010
    ghc-options:
      -Wall -Wnoncanonical-monad-instances
      -Wincomplete-uni-patterns -Wincomplete-record-updates
      -Wredundant-constraints -Widentities -rtsopts
      -- See Plutus Tx readme
      -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
      -fno-strictness -fno-specialise
    if flag(defer-plugin-errors)
        ghc-options: -fplugin-opt PlutusTx.Plugin:defer-errors

executable serialise
  import: lang
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       aeson ^>=1.5.6.0
                     , base ^>=4.14.1.0
                     , base16-bytestring
                     , bytestring -any
                     , data-default
                     , cardano-api -any
                     , containers -any
                     , freer-extras
                     , lens
                     , playground-common
                     , plutus-contract
                     , plutus-ledger
                     , plutus-ledger-api
                     , plutus-ledger-constraints
                     , plutus-tx-plugin
                     , plutus-script-utils
                     , plutus-tx
                     , text
                     , serialise
